--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ingreso Equipos | Base Acciona</title>
+  <title>Ingreso de Equipos - Acciona</title>
   <style>
     * { box-sizing: border-box; }
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f4f4f4;
+      background-color: #f5f5f5;
       color: #222;
       display: flex;
       flex-direction: column;
@@ -17,10 +17,10 @@
       margin: 0;
     }
     .container {
-      background-color: #ffffff;
+      background-color: #fff;
       padding: 25px;
       border-radius: 18px;
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.05);
       max-width: 480px;
       width: 100%;
       border: 1px solid #ccc;
@@ -32,76 +32,53 @@
     }
     .logo {
       max-width: 120px;
+      background-color: rgba(0, 0, 0, 0.04);
       padding: 6px;
-      background-color: rgba(0, 0, 0, 0.05);
-      border-radius: 6px;
-      transition: transform 0.3s ease;
+      border-radius: 8px;
     }
-    .logo:hover { transform: scale(1.03); }
     h1 {
-      font-size: 18px;
-      font-weight: 600;
-      color: #b71c1c;
+      font-size: 17px;
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 18px;
     }
     label {
-      display: block;
-      margin-top: 14px;
-      margin-bottom: 6px;
       font-weight: bold;
-      color: #333;
-      font-size: 14px;
-    }
-    .section {
-      margin-bottom: 24px;
+      display: block;
+      margin-top: 12px;
+      margin-bottom: 6px;
     }
     .input-estilo {
       width: 100%;
-      min-height: 42px;
-      padding: 10px 12px;
-      border-radius: 6px;
+      padding: 10px;
       border: 1px solid #ccc;
+      border-radius: 6px;
       font-size: 14px;
       background-color: #fafafa;
-      color: #000;
-      transition: border-color 0.3s, box-shadow 0.3s;
-      resize: none;
     }
     .input-estilo:focus {
       border-color: #c62828;
-      box-shadow: 0 0 5px rgba(198, 40, 40, 0.4);
       outline: none;
-    }
-    .input-manual {
-      background-color: #ffe5e5 !important;
+      box-shadow: 0 0 4px rgba(198, 40, 40, 0.4);
     }
     .datetime-box {
-      background-color: #f0f0f0;
-      border: 1px solid #ccc;
-      padding: 10px;
       text-align: center;
+      background-color: #eee;
+      padding: 8px;
       border-radius: 8px;
-      margin-bottom: 18px;
+      margin-bottom: 16px;
       font-weight: bold;
-      font-size: 14px;
-      color: #222;
     }
     .alert-box {
       display: none;
-      border-radius: 6px;
-      font-weight: bold;
-      text-align: center;
-      margin-top: 10px;
       padding: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      margin-top: 10px;
       font-size: 13px;
+      border-radius: 6px;
     }
     .alert-red {
       background-color: #f8d7da;
       color: #721c24;
       border: 1px solid #f5c6cb;
-      white-space: pre-line;
     }
     .alert-yellow {
       background-color: #fff3cd;
@@ -111,121 +88,207 @@
     .btn {
       background-color: #c62828;
       color: #fff;
-      border: none;
-      padding: 14px 20px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 15px;
-      transition: background-color 0.3s ease, transform 0.2s ease;
-      width: 100%;
+      padding: 14px;
       margin-top: 18px;
+      width: 100%;
+      border: none;
+      border-radius: 8px;
+      font-size: 15px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
     }
     .btn:hover {
       background-color: #b71c1c;
-      transform: scale(1.03);
-      box-shadow: 0 0 12px rgba(255, 0, 0, 0.2);
     }
     .spinner {
       display: inline-block;
-      width: 15px;
-      height: 15px;
+      width: 16px;
+      height: 16px;
       border: 2px solid rgba(198, 40, 40, 0.3);
-      border-top-color: #c62828;
+      border-top: 2px solid #c62828;
       border-radius: 50%;
       animation: spin 1s linear infinite;
-      vertical-align: middle;
-      margin-right: 6px;
+      margin-right: 8px;
     }
-    @keyframes spin { to { transform: rotate(360deg); } }
-
-    #envio-msg {
-      display: none;
-      color: #c62828;
-      font-weight: bold;
-      margin-top: 12px;
-      text-align: center;
+    @keyframes spin {
+      to { transform: rotate(360deg); }
     }
   </style>
 </head>
 <body>
   <div class="container">
     <div class="logo-wrapper">
-      <img class="logo" src="https://raw.githubusercontent.com/acciona-airport/Zarpes-acciona-aero/main/LogoAcciona2.png" alt="Logo Acciona" />
+      <img class="logo" src="https://raw.githubusercontent.com/acciona-airport/Zarpes-acciona-aero/main/LogoAcciona2.png" alt="Logo Acciona">
     </div>
 
     <h1>Formulario de Ingreso de Equipos (Base Acciona)</h1>
     <div class="datetime-box" id="datetime"></div>
 
-    <!-- Formulario -->
-    <form id="miFormulario" action="https://docs.google.com/forms/d/e/1FAIpQLSf3ADvFtCeFHlm7RzOtNuuuxZkzjCgFnrvw7KM2d3DIPOGumg/formResponse" method="POST" target="_self">
-      <div class="section">
-        <label for="rut">RUT del conductor:</label>
-        <input type="text" class="input-estilo" name="entry.675531615" id="rut" placeholder="Ej: 12345678-9" required autofocus />
-      </div>
+    <label for="rut-conductor">RUT del conductor:</label>
+    <input class="input-estilo" id="rut-conductor" onblur="buscarDatosConductor()" placeholder="Ej: 12345678-9">
 
-      <div class="section">
-        <label for="nombre">Nombre del conductor:</label>
-        <input type="text" class="input-estilo" name="entry.851525222" id="nombre" required oninput="this.value = this.value.toUpperCase();" />
-      </div>
+    <label>Nombre conductor:</label>
+    <div class="input-estilo" id="datos-conductor"></div>
+    <input class="input-estilo" id="nombre-manual" placeholder="Nombre manual" style="display:none;" oninput="this.value=this.value.toUpperCase()">
 
-      <div class="section">
-        <label for="equipo">Número de equipo:</label>
-        <input type="text" class="input-estilo" name="entry.1413809422" id="equipo" required />
-      </div>
+    <label for="numero-equipo">Número de equipo:</label>
+    <input class="input-estilo" id="numero-equipo" onblur="buscarDatosEquipo()" placeholder="Ej: 51125">
 
-      <div class="section">
-        <label for="familia">Familia:</label>
-        <input type="text" class="input-estilo" name="entry.783685052" id="familia" required />
-      </div>
+    <label>Familia:</label>
+    <div class="input-estilo" id="familia-equipo"></div>
 
-      <div class="section">
-        <label for="habilitado">¿Habilitado para ingresar?</label>
-        <input type="text" class="input-estilo" name="entry.10343893" id="habilitado" required />
-      </div>
+    <label>¿Habilitado para ingresar?</label>
+    <div class="input-estilo" id="status-equipo"></div>
 
-      <div class="section">
-        <label for="observaciones">Observaciones:</label>
-        <textarea class="input-estilo" name="entry.2133373249" id="observaciones" oninput="this.value = this.value.toUpperCase();"></textarea>
-      </div>
+    <div class="alert-box alert-red" id="alerta-ingreso">
+      ❌ Equipo no habilitado para el ingreso, contacte a Control Flota 📞 Tel: 56 9 3860 1767.
+    </div>
+    <div class="alert-box alert-yellow" id="alerta-carga-extra">
+      ⚠️ Solo puede ingresar para cargar combustible o batería.
+    </div>
 
-      <div class="section">
-        <label for="guardia">Guardia fiscalizador:</label>
-        <input type="text" class="input-estilo" name="entry.234162856" id="guardia" required oninput="this.value = this.value.toUpperCase();" />
-      </div>
+    <label>Observaciones:</label>
+    <div class="input-estilo" id="observaciones-equipo"></div>
+    <textarea class="input-estilo" id="observaciones-manual" placeholder="Ingrese observaciones" style="display:none;" oninput="this.value=this.value.toUpperCase()"></textarea>
 
-      <button type="submit" class="btn" id="boton-enviar">Enviar</button>
-      <div id="envio-msg"><span class="spinner"></span> Enviando datos, espere...</div>
-    </form>
+    <label for="guardia">Guardia fiscalizador:</label>
+    <input class="input-estilo" id="guardia" placeholder="Nombre del guardia" oninput="this.value=this.value.toUpperCase()">
+
+    <button class="btn" onclick="enviarFormulario()">Enviar</button>
   </div>
 
   <script>
+    const URL_GET = "https://script.google.com/macros/s/AKfycbx5RL_GDtFwsKcMWyBYLwi2sdXtnkh9eXzdVs73jTS6zt3oAu9dmQwSeiyx43Tkt_QfeQ/exec";
+
     function actualizarFechaHora() {
       const now = new Date();
       const dias = ['Domingo','Lunes','Martes','Miércoles','Jueves','Viernes','Sábado'];
       const meses = ['Enero','Febrero','Marzo','Abril','Mayo','Junio','Julio','Agosto','Septiembre','Octubre','Noviembre','Diciembre'];
-      const diaSemana = dias[now.getDay()];
-      const dia = now.getDate();
-      const mes = meses[now.getMonth()];
-      const anio = now.getFullYear();
-      let hora = now.getHours();
-      const minutos = String(now.getMinutes()).padStart(2, '0');
-      const segundos = String(now.getSeconds()).padStart(2, '0');
-      const ampm = hora >= 12 ? 'P.M' : 'A.M';
-      hora = hora % 12 || 12;
-      const fechaFormateada = `${diaSemana}, ${dia} de ${mes} de ${anio}, ${hora}:${minutos}:${segundos} ${ampm}`;
-      document.getElementById("datetime").innerText = fechaFormateada;
+      const hora = now.getHours() % 12 || 12;
+      const ampm = now.getHours() >= 12 ? 'P.M' : 'A.M';
+      const str = `${dias[now.getDay()]}, ${now.getDate()} de ${meses[now.getMonth()]} de ${now.getFullYear()}, ${hora}:${String(now.getMinutes()).padStart(2, '0')} ${ampm}`;
+      document.getElementById("datetime").textContent = str;
     }
     setInterval(actualizarFechaHora, 1000);
     actualizarFechaHora();
 
-    // Redirección posterior a envío exitoso
-    document.getElementById("miFormulario").addEventListener("submit", function() {
-      document.getElementById("envio-msg").style.display = "block";
-      document.getElementById("boton-enviar").disabled = true;
+    async function buscarDatosConductor() {
+      const rut = document.getElementById("rut-conductor").value.trim();
+      const box = document.getElementById("datos-conductor");
+      const manual = document.getElementById("nombre-manual");
+
+      if (!rut) {
+        box.textContent = "";
+        manual.style.display = "none";
+        return;
+      }
+
+      box.innerHTML = '<span class="spinner"></span> Buscando...';
+      try {
+        const res = await fetch(`${URL_GET}?tipo=personal&id=${encodeURIComponent(rut)}`);
+        const data = await res.json();
+        if (data.error) {
+          box.textContent = "❌ No encontrado";
+          manual.style.display = "block";
+        } else {
+          box.textContent = data.NOMBRE || "(sin nombre)";
+          manual.style.display = "none";
+        }
+      } catch {
+        box.textContent = "❌ Error al buscar";
+        manual.style.display = "block";
+      }
+    }
+
+    async function buscarDatosEquipo() {
+      const id = document.getElementById("numero-equipo").value.trim();
+      const familiaBox = document.getElementById("familia-equipo");
+      const statusBox = document.getElementById("status-equipo");
+      const obsBox = document.getElementById("observaciones-equipo");
+      const obsManual = document.getElementById("observaciones-manual");
+      const alerta = document.getElementById("alerta-ingreso");
+      const alertaAmarilla = document.getElementById("alerta-carga-extra");
+
+      if (!id) {
+        familiaBox.textContent = statusBox.textContent = obsBox.textContent = "";
+        alerta.style.display = alertaAmarilla.style.display = obsManual.style.display = "none";
+        return;
+      }
+
+      familiaBox.innerHTML = statusBox.innerHTML = obsBox.innerHTML = '<span class="spinner"></span> Buscando...';
+
+      try {
+        const res = await fetch(`${URL_GET}?tipo=equipo&id=${encodeURIComponent(id)}`);
+        const data = await res.json();
+
+        if (data.error) {
+          familiaBox.textContent = statusBox.textContent = obsBox.textContent = "❌ No encontrado";
+        } else {
+          familiaBox.textContent = data.FAMILIA || "";
+          const status = (data["STATUS ✎"] || "").toLowerCase();
+          const obs = (data.OBSERVACIONES || "").trim();
+
+          if (status === "operativo") {
+            statusBox.textContent = "❌ No habilitado";
+            obsBox.textContent = "⚠️ Observaciones requeridas";
+            alerta.style.display = alertaAmarilla.style.display = obsManual.style.display = "block";
+          } else {
+            statusBox.textContent = "✅ Habilitado";
+            obsBox.textContent = obs || "Equipo fuera de Operación, ya sea por inoperatividad o revisión en taller.";
+            alerta.style.display = alertaAmarilla.style.display = obsManual.style.display = "none";
+          }
+        }
+      } catch {
+        familiaBox.textContent = statusBox.textContent = obsBox.textContent = "❌ Error";
+        alerta.style.display = alertaAmarilla.style.display = obsManual.style.display = "none";
+      }
+    }
+
+    function enviarFormulario() {
+      const rut = document.getElementById("rut-conductor").value.trim();
+      const nombreManual = document.getElementById("nombre-manual").value.trim();
+      const nombre = document.getElementById("datos-conductor").textContent.includes("No encontrado") ? nombreManual : document.getElementById("datos-conductor").textContent.trim();
+      const equipo = document.getElementById("numero-equipo").value.trim();
+      const familia = document.getElementById("familia-equipo").textContent.trim();
+      const habilitado = document.getElementById("status-equipo").textContent.trim();
+      const observaciones = habilitado.includes("No habilitado") ? document.getElementById("observaciones-manual").value.trim() : document.getElementById("observaciones-equipo").textContent.trim();
+      const guardia = document.getElementById("guardia").value.trim();
+
+      if (!rut || !nombre || !equipo || !guardia || (!observaciones && habilitado.includes("No habilitado"))) {
+        alert("⚠️ Completa todos los campos obligatorios.");
+        return;
+      }
+
+      const form = document.createElement("form");
+      form.action = "https://docs.google.com/forms/d/e/1FAIpQLSf3ADvFtCeFHlm7RzOtNuuuxZkzjCgFnrvw7KM2d3DIPOGumg/formResponse";
+      form.method = "POST";
+      form.target = "_self";
+
+      const campos = {
+        "entry.675531615": rut,
+        "entry.851525222": nombre,
+        "entry.1413809422": equipo,
+        "entry.783685052": familia,
+        "entry.10343893": habilitado,
+        "entry.2133373249": observaciones,
+        "entry.234162856": guardia
+      };
+
+      for (const name in campos) {
+        const input = document.createElement("input");
+        input.type = "hidden";
+        input.name = name;
+        input.value = campos[name];
+        form.appendChild(input);
+      }
+
+      document.body.appendChild(form);
+      form.submit();
+
       setTimeout(() => {
         window.location.href = "https://acciona-airport.github.io/Ingresos-base-acciona/";
-      }, 2500);
-    });
+      }, 1000);
+    }
   </script>
 </body>
 </html>
