--- a/index.html
+++ b/index.html
@@ -207,8 +207,12 @@
     <div class="section">
       <label>¿Habilitado para ingresar?</label>
       <div class="input-estilo" id="status-equipo"></div>
-      <div class="alert-box alert-red" id="alerta-ingreso">❌Equipo no habilitado para el ingreso, contacte a Control Flota 📞 Tel: 56 9 3860 1767.</div>
-      <div class="alert-box alert-yellow" id="alerta-carga-extra">⚠️ Ojo: Este vehículo solo puede ingresar a la Base Acciona para abastecerse de combustible o para realizar una carga eléctrica.</div>
+      <div class="alert-box alert-red" id="alerta-ingreso">
+        ❌Equipo no habilitado para el ingreso, contacte a Control Flota 📞 Tel: 56 9 3860 1767.
+      </div>
+      <div class="alert-box alert-yellow" id="alerta-carga-extra">
+        ⚠️ Ojo: Este vehículo solo puede ingresar a la Base Acciona para abastecerse de combustible o para realizar una carga eléctrica.
+      </div>
     </div>
 
     <div class="section">
