--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
       font-weight: bold;
       text-align: center;
       margin-top: 10px;
-      padding: 10px;
+      padding: 12px 10px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       font-size: 13px;
+      line-height: 1.4;
     }
     .alert-red {
       background-color: #f8d7da;
       color: #721c24;
       border: 1px solid #f5c6cb;
-      white-space: pre-line;
     }
     .alert-yellow {
       background-color: #fff3cd;
@@ -207,12 +207,8 @@
     <div class="section">
       <label>¿Habilitado para ingresar?</label>
       <div class="input-estilo" id="status-equipo"></div>
-      <div class="alert-box alert-red" id="alerta-ingreso">
-        ❌Equipo no habilitado para el ingreso, contacte a Control Flota 📞 Tel: 56 9 3860 1767.
-      </div>
-      <div class="alert-box alert-yellow" id="alerta-carga-extra">
-        ⚠️ Ojo: Este vehículo solo puede ingresar a la Base Acciona para abastecerse de combustible o para realizar una carga eléctrica.
-      </div>
+      <div class="alert-box alert-red" id="alerta-ingreso">❌Equipo no habilitado para el ingreso, contacte a Control Flota 📞 Tel: 56 9 3860 1767.</div>
+      <div class="alert-box alert-yellow" id="alerta-carga-extra">⚠️ Ojo: Este vehículo solo puede ingresar a la Base Acciona para abastecerse de combustible o para realizar una carga eléctrica.</div>
     </div>
 
     <div class="section">
