--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div class="datetime-box" id="datetime"></div>
 
     <div class="section">
-      <label for="rut-conductor">RUT del conductor "Ej: 12345678":</label>
+      <label for="rut-conductor">RUT del conductor: - Ej: 12345678.</label>
       <input type="text" class="input-estilo" id="rut-conductor" onblur="buscarDatosConductor()" placeholder="Ingrese el RUT sin puntos, y sin digito verificador." />
     </div>
 
